kubernetes/apps/media/seerr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: media
  annotations:
    external-dns.kubernetes.io/target: "internal.ewatkins.dev"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "requests.ewatkins.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=31449600; includeSubDomains"
      backendRefs:
        - name: seerr
          port: 8080
